--- a/angular.json
+++ b/angular.json
@@ -23,10 +23,10 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/admin/lecturefeed-ui",
-            "index": "src/admin/index.html",
-            "main": "src/admin/main.ts",
-            "polyfills": "src/admin/polyfills.ts",
+            "outputPath": "dist/",
+            "index": "src/index.html",
+            "main": "src/main.ts",
+            "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": [
@@ -34,7 +34,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/admin/styles.scss"
+              "src/styles.scss"
             ],
             "scripts": []
           },
@@ -92,14 +92,14 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "main": "src/admin/test.ts",
-            "polyfills": "src/admin/polyfills.ts",
+            "main": "src/test.ts",
+            "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.spec.json",
             "karmaConfig": "karma.conf.js",
             "inlineStyleLanguage": "scss",
             "assets": [
-              "src/admin/favicon.ico",
-              "src/admin/assets"
+              "src/avicon.ico",
+              "src/assets"
             ],
             "styles": [
               "src/styles.scss"
