--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,23 +5,16 @@ on:
     branches: [ master ]
   pull_request:
     branches: [ master ]
-
-jobs:
-
-  build:
-  
-    runs-on: ubuntu-latest
     
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    name: Node 14
     steps:
-      - uses: actions/checkout@v1
-      - uses: actions/setup-node@v1
+      - uses: actions/checkout@v2
+      - name: Setup node
+        uses: actions/setup-node@v2
         with:
           node-version: 14
       - run: npm install
       - run: npm test
-      #- run: npm run build
-      #- run: mkdir staging && cp dist/*.* staging
-      #- uses: actions/upload-artifact@v1
-      #  with:
-      #    name: Package
-      #    path: staging
