--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: NodeJS 
+name: Nodejs-Build 
 
 on:
   push:
@@ -25,4 +25,11 @@ jobs:
     - name: Build
       run: |
         npm install
-        npm test
+        npm run test
+        npm run build
+    - name: Create Package
+    - run: mkdir staging && cp dist/*.* staging
+    - uses: actions/upload-artifact@v1
+      with:
+        name: Package
+        path: staging
