--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,11 +22,14 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
 
+    - name: Install
+      run: npm install
+                
+    - name: Run tests
+      run: npm run test-server
+                
     - name: Build
-      run: |
-        npm install
-        npm run test
-        npm run build
+      run: npm run build
         
     - name: Package
       run:  mkdir staging && cp dist/*.* staging
