--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
     "net": "^1.0.2",
+    "ngx-clipboard": "^14.0.2",
     "primeicons": "^5.0.0",
     "primeng": "^13.0.0-rc.2",
     "rxjs": "~6.6.0",
