--- a/package.json
+++ b/package.json
@@ -19,11 +19,15 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@ngrx/store": "^12.5.1",
+    "@types/js-cookie": "^3.0.1",
+    "js-cookie": "^3.0.1",
+    "jwt-decode": "^3.1.2",
     "net": "^1.0.2",
     "ngx-clipboard": "^14.0.2",
     "primeicons": "^5.0.0",
     "primeng": "^13.0.0-rc.2",
-    "rxjs": "~6.6.0",
+    "rxjs": "~7.3.0",
     "sockjs-client": "^1.5.2",
     "stompjs": "^2.3.3",
     "tslib": "^2.3.0",
