--- a/angular.json
+++ b/angular.json
@@ -34,7 +34,17 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              {
+                "input": "src/theme-dark.scss",
+                "bundleName": "dark",
+                "inject": false
+              },
+              {
+                "input": "src/theme-light.scss",
+                "bundleName": "light",
+                "inject": false
+              }
             ],
             "scripts": []
           },
