--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "net": "^1.0.2",
     "ngx-clipboard": "^14.0.2",
     "primeicons": "^5.0.0",
-    "primeng": "^13.0.0-rc.2",
+    "primeng": "^13.0.0",
     "rxjs": "~7.3.0",
     "sockjs-client": "^1.5.2",
     "stompjs": "^2.3.3",
