--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~12.2.0",
+    "@angular/cdk": "^13.0.3",
     "@angular/common": "~12.2.0",
     "@angular/compiler": "~12.2.0",
     "@angular/core": "~12.2.0",
@@ -25,8 +26,9 @@
     "jwt-decode": "^3.1.2",
     "net": "^1.0.2",
     "ngx-clipboard": "^14.0.2",
+    "primeflex": "^3.1.0",
     "primeicons": "^5.0.0",
-    "primeng": "^13.0.0",
+    "primeng": "^13.0.1",
     "rxjs": "~7.3.0",
     "sockjs-client": "^1.5.2",
     "stompjs": "^2.3.3",
