--- a/angular.json
+++ b/angular.json
@@ -46,7 +46,9 @@
                 "inject": false
               }
             ],
-            "scripts": []
+            "scripts": [
+              "../node_modules/chart.js/dist/Chart.js"
+            ]
           },
           "configurations": {
             "production": {
