LFD-86 [web] session manager step 1

--- a/angular.json
+++ b/angular.json
@@ -46,9 +46,7 @@
                 "inject": false
               }
             ],
-            "scripts": [
-              "../node_modules/chart.js/dist/Chart.js"
-            ]
+            "scripts": []
           },
           "configurations": {
             "production": {
