--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~13.3.0",
     "@ngrx/store": "^12.5.1",
     "@types/js-cookie": "^3.0.1",
+    "echarts": "^5.3.2",
     "file-saver": "^2.0.5",
     "js-cookie": "^3.0.1",
     "jwt-decode": "^3.1.2",
