--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "net": "^1.0.2",
     "ngx-clipboard": "^14.0.2",
     "ngx-echarts": "^8.0.1",
+    "ngx-qrcode-styling": "^1.0.12",
     "primeflex": "^3.1.0",
     "primeicons": "^5.0.0",
     "primeng": "^13.0.1",
